Finish Specs for Action, add Bisect, Remove 1P
- Checked specs for action.mli
- added make command for bisect
- removed 1-player mode option

--- a/bin/dune
+++ b/bin/dune
@@ -1,3 +1,5 @@
 (executable
  (name main)
- (libraries Game ANSITerminal))
+ (libraries Game ANSITerminal)
+ (instrumentation
+  (backend bisect_ppx)))
